# corewar

./: Batman.s  CMakeLists.txt  Makefile  author  helltrain.s  lolkek  manson.cor  test.cor  на всякий
includes/: corewar.h
libft/: Makefile
libft/includes/: libft.h
libft/srcs/: field_width.c  ft_printf.c  ft_strclen.c  ft_swap.c  get_next_line.c  htlpers1.c  sv_zveno.c  type_dioux.c
srcs/: ALEX.c  addit_funcs.c  byte.c  check_champion.c  check_instructions.c  check_label.c  check_separator.c  errors.c  inits.c  labels.c  main.c  op.c  setters.c  sizing.c  start_checking.c  write_to_file.c
srcs/vm/: Makefile  errors.c  game.c  main.c  ops.c  ops2.c  ops3.c  ops4.c  ops_utils.c  parser.c  print.c  process_ops.c  util.c  vm.h
