cmake_minimum_required(VERSION 3.14)
project(1 C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft/includes)

add_executable(1
        includes/corewar.h
        includes/op.h
        libft/includes/ac.h
        libft/includes/flags.h
        libft/includes/ft_printf.h
        libft/includes/initdata.h
        libft/includes/libft.h
        libft/includes/ml.h
        libft/srcs/accuracy.c
        libft/srcs/conver.c
        libft/srcs/field_width.c
        libft/srcs/flags1.c
        libft/srcs/flags2.c
        libft/srcs/flags3.c
        libft/srcs/ft_abs.c
        libft/srcs/ft_atoi.c
        libft/srcs/ft_bool.c
        libft/srcs/ft_bzero.c
        libft/srcs/ft_fabs.c
        libft/srcs/ft_floor.c
        libft/srcs/ft_fpart.c
        libft/srcs/ft_free_mas.c
        libft/srcs/ft_fuldel.c
        libft/srcs/ft_ipart.c
        libft/srcs/ft_isalnum.c
        libft/srcs/ft_isalpha.c
        libft/srcs/ft_isascii.c
        libft/srcs/ft_isdigit.c
        libft/srcs/ft_isprint.c
        libft/srcs/ft_itoa.c
        libft/srcs/ft_itoabase.c
        libft/srcs/ft_itoabase_size_p.c
        libft/srcs/ft_itoabasell.c
        libft/srcs/ft_lenstrm.c
        libft/srcs/ft_lstadd.c
        libft/srcs/ft_lstadend.c
        libft/srcs/ft_lstdel.c
        libft/srcs/ft_lstdelone.c
        libft/srcs/ft_lstiter.c
        libft/srcs/ft_lstmap.c
        libft/srcs/ft_lstnew.c
        libft/srcs/ft_max.c
        libft/srcs/ft_memalloc.c
        libft/srcs/ft_memccpy.c
        libft/srcs/ft_memchr.c
        libft/srcs/ft_memcmp.c
        libft/srcs/ft_memcpy.c
        libft/srcs/ft_memdel.c
        libft/srcs/ft_memmove.c
        libft/srcs/ft_memset.c
        libft/srcs/ft_min.c
        libft/srcs/ft_printf.c
        libft/srcs/ft_putchar.c
        libft/srcs/ft_putchar_fd.c
        libft/srcs/ft_putendl.c
        libft/srcs/ft_putendl_fd.c
        libft/srcs/ft_putnbr.c
        libft/srcs/ft_putnbr_fd.c
        libft/srcs/ft_putstr.c
        libft/srcs/ft_putstr_fd.c
        libft/srcs/ft_rfpart.c
        libft/srcs/ft_round.c
        libft/srcs/ft_str2len.c
        libft/srcs/ft_strcat.c
        libft/srcs/ft_strchr.c
        libft/srcs/ft_strclen.c
        libft/srcs/ft_strclr.c
        libft/srcs/ft_strcmp.c
        libft/srcs/ft_strcpy.c
        libft/srcs/ft_strdel.c
        libft/srcs/ft_strdup.c
        libft/srcs/ft_strequ.c
        libft/srcs/ft_striter.c
        libft/srcs/ft_striteri.c
        libft/srcs/ft_strjoin.c
        libft/srcs/ft_strlcat.c
        libft/srcs/ft_strlen.c
        libft/srcs/ft_strmap.c
        libft/srcs/ft_strmapi.c
        libft/srcs/ft_strncat.c
        libft/srcs/ft_strncmp.c
        libft/srcs/ft_strncpy.c
        libft/srcs/ft_strnequ.c
        libft/srcs/ft_strnew.c
        libft/srcs/ft_strnstr.c
        libft/srcs/ft_strrchr.c
        libft/srcs/ft_strsplit.c
        libft/srcs/ft_strstr.c
        libft/srcs/ft_strsub.c
        libft/srcs/ft_strtrim.c
        libft/srcs/ft_swap.c
        libft/srcs/ft_tolower.c
        libft/srcs/ft_toupper.c
        libft/srcs/get_next_line.c
        libft/srcs/htlpers1.c
        libft/srcs/htlpers2.c
        libft/srcs/htlpers3.c
        libft/srcs/ml_c_l.c
        libft/srcs/ml_h.c
        libft/srcs/ml_hh.c
        libft/srcs/ml_l.c
        libft/srcs/ml_ll.c
        libft/srcs/sv_zveno.c
        libft/srcs/type_csp.c
        libft/srcs/type_dioux.c
        libft/srcs/type_f.c
        libft/srcs/type_fs.c
        libft/srcs/type_proc.c
        libft/srcs/type_updupoupu.c
        srcs/addit_funcs.c
        srcs/ALEX.c
        srcs/byte.c
        srcs/errors.c
        srcs/inits.c
        srcs/labels.c
        srcs/main.c
        srcs/op.c
        srcs/setters.c
        srcs/sizing.c
        srcs/write_to_file.c
        srcs/check_separator.c
        srcs/check_label.c
        srcs/check_instructions.c
        srcs/check_champion.c
        srcs/start_checking.c)
