cmake_minimum_required(VERSION 3.14)
project(corewar C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft/includes)

add_executable(corewar
        includes/corewar.h
        includes/op.h
        libft/ft_printf/buffer.c
        libft/ft_printf/checks.c
        libft/ft_printf/ft_ltoa.c
        libft/ft_printf/ft_parse.c
        libft/ft_printf/ft_print_fl.c
        libft/ft_printf/ft_print_scp.c
        libft/ft_printf/ft_printf.c
        libft/ft_printf/ft_printf_diox.c
        libft/ft_printf/ft_utoa.c
        libft/ft_printf/utils.c
        libft/includes/ft_printf.h
        libft/includes/libft.h
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_isspace.c
        libft/ft_itoa.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_str_is_alpha.c
        libft/ft_str_is_lowercase.c
        libft/ft_str_is_numeric.c
        libft/ft_str_is_printable.c
        libft/ft_str_is_uppercase.c
        libft/ft_strcapitalize.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strcut.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strlowcase.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_strupcase.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/get_next_line.c
        srcs/addit_funcs.c
        srcs/aleh_clean.c
        srcs/byte.c
        srcs/check_arguments.c
        srcs/check_champion.c
        srcs/check_helpers.c
        srcs/check_instructions.c
        srcs/check_label.c
        srcs/check_pct.c
        srcs/check_separator.c
        srcs/errors.c
        srcs/help_funcs.c
        srcs/inits.c
        srcs/labels.c
        srcs/lexem_oth.c
        srcs/lexems.c
        srcs/lexems_frs.c
        srcs/lexems_sec.c
        srcs/lexems_thr.c
        srcs/main.c
        srcs/op.c
        srcs/print.c
        srcs/setters.c
        srcs/sizing.c
        srcs/start_checking.c
        srcs/take_lex.c
        srcs/write_to_file.c)
